--- a/TS_1/Trabajo Semanal 1.ipynb
+++ b/TS_1/Trabajo Semanal 1.ipynb
@@ -29,36 +29,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"800\"\n",
-       "            height=\"1200\"\n",
-       "            src=\"./TS1_1.pdf\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x23015ab0070>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(\"./TS1_1.pdf\", width=800, height=1200)"
+    "<img src=\"./Item1.png\" /> "
    ]
   },
   {
@@ -83,36 +57,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"800\"\n",
-       "            height=\"500\"\n",
-       "            src=\"./TS1_2.pdf\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x23049e84910>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(\"./TS1_2.pdf\", width=800, height=500)"
+    "<img src=\"./Item3.png\" /> "
    ]
   },
   {
