--- a/TS_2/Trabajo Semanal 2.ipynb
+++ b/TS_2/Trabajo Semanal 2.ipynb
@@ -361,7 +361,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "85901a63",
+   "id": "944c4e3a",
    "metadata": {},
    "source": [
     "### Implementación de transferencia Butterworth\n",
@@ -400,19 +400,11 @@
     "\n",
     "<img src=\"./CapturaPasabanda1.png\" width=700/> \n",
     "\n",
-    "\n",
+    "<img src=\"./CapturaPasabanda2.png\" width=700/> \n",
     "\n",
     "#### Analisis de los resultados\n",
     "Se observa que sin modificar los valores de los componentes, se obtuvo una transferencia pasabanda tan solo tomando la salida en otro nodo del mismo circuito, demostrando las ventajas de la topologia Åckerberg-Mossberg."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aea3bb9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
