--- a/TS_2/Trabajo Semanal 2.ipynb
+++ b/TS_2/Trabajo Semanal 2.ipynb
@@ -179,6 +179,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8631bd5c",
    "metadata": {},
@@ -186,7 +187,7 @@
     "#### Analisis de los resultados\n",
     "\n",
     "Se observa en primer lugar que la transferencia coincide con la obtenida, es decir, la de un filtro pasabajos. \n",
-    "Respecto a los calculos, se comprueban los resultados obtenidos de una frecuencia de corte de $\\omega_0 = 1 \\frac{rad}{s} = 2\\pi 160 Hz$, y de una ganancia en corriente continua de 20dB."
+    "Respecto a los calculos, se comprueban los resultados obtenidos de una frecuencia de corte de $\\omega_0 = 1 \\frac{rad}{s} = 2\\pi 160 mHz$, y de una ganancia en corriente continua de 20dB."
    ]
   },
   {
