--- a/TPLAB_1/Informe PreTP.ipynb
+++ b/TPLAB_1/Informe PreTP.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "86b92f3e",
    "metadata": {},
@@ -9,13 +10,14 @@
     "\n",
     "#### Teoría de los Circuitos 2\n",
     "\n",
-    "# Trabajo Semanal 5\n",
+    "# Pre Informe - Trabajo Practico de Laboratorio 1\n",
     "\n",
     "### Juan Manuel Ronchetti\n",
     "### Grupo 3 2023"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e51bfeca",
    "metadata": {},
@@ -68,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2657620a",
    "metadata": {},
@@ -142,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03149c4a",
    "metadata": {},
@@ -157,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c6899967",
    "metadata": {},
@@ -171,6 +176,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03deb8b3",
    "metadata": {},
@@ -196,6 +202,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c22ab532",
    "metadata": {},
@@ -250,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c1e33ad1",
    "metadata": {},
